parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> statement
Rule 1     statement -> ID EQUALS expression SEMICOLON
Rule 2     expression -> expression PLUS term
Rule 3     expression -> expression MINUS term
Rule 4     expression -> term
Rule 5     term -> term TIMES factor
Rule 6     term -> term DIVIDE factor
Rule 7     term -> factor
Rule 8     factor -> NUM
Rule 9     factor -> LPAREN expression RPAREN

Terminals, with rules where they appear

DIVIDE               : 6
EQUALS               : 1
ID                   : 1
LPAREN               : 9
MINUS                : 3
NUM                  : 8
PLUS                 : 2
RPAREN               : 9
SEMICOLON            : 1
TIMES                : 5
error                : 

Nonterminals, with rules where they appear

expression           : 1 2 3 9
factor               : 5 6 7
statement            : 0
term                 : 2 3 4 5 6

Parsing method: LALR

state 0

    (0) S' -> . statement
    (1) statement -> . ID EQUALS expression SEMICOLON

    ID              shift and go to state 2

    statement                      shift and go to state 1

state 1

    (0) S' -> statement .



state 2

    (1) statement -> ID . EQUALS expression SEMICOLON

    EQUALS          shift and go to state 3


state 3

    (1) statement -> ID EQUALS . expression SEMICOLON
    (2) expression -> . expression PLUS term
    (3) expression -> . expression MINUS term
    (4) expression -> . term
    (5) term -> . term TIMES factor
    (6) term -> . term DIVIDE factor
    (7) term -> . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 4
    term                           shift and go to state 5
    factor                         shift and go to state 6

state 4

    (1) statement -> ID EQUALS expression . SEMICOLON
    (2) expression -> expression . PLUS term
    (3) expression -> expression . MINUS term

    SEMICOLON       shift and go to state 9
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11


state 5

    (4) expression -> term .
    (5) term -> term . TIMES factor
    (6) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 4 (expression -> term .)
    PLUS            reduce using rule 4 (expression -> term .)
    MINUS           reduce using rule 4 (expression -> term .)
    RPAREN          reduce using rule 4 (expression -> term .)
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 13


state 6

    (7) term -> factor .

    TIMES           reduce using rule 7 (term -> factor .)
    DIVIDE          reduce using rule 7 (term -> factor .)
    SEMICOLON       reduce using rule 7 (term -> factor .)
    PLUS            reduce using rule 7 (term -> factor .)
    MINUS           reduce using rule 7 (term -> factor .)
    RPAREN          reduce using rule 7 (term -> factor .)


state 7

    (8) factor -> NUM .

    TIMES           reduce using rule 8 (factor -> NUM .)
    DIVIDE          reduce using rule 8 (factor -> NUM .)
    SEMICOLON       reduce using rule 8 (factor -> NUM .)
    PLUS            reduce using rule 8 (factor -> NUM .)
    MINUS           reduce using rule 8 (factor -> NUM .)
    RPAREN          reduce using rule 8 (factor -> NUM .)


state 8

    (9) factor -> LPAREN . expression RPAREN
    (2) expression -> . expression PLUS term
    (3) expression -> . expression MINUS term
    (4) expression -> . term
    (5) term -> . term TIMES factor
    (6) term -> . term DIVIDE factor
    (7) term -> . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    expression                     shift and go to state 14
    term                           shift and go to state 5
    factor                         shift and go to state 6

state 9

    (1) statement -> ID EQUALS expression SEMICOLON .

    $end            reduce using rule 1 (statement -> ID EQUALS expression SEMICOLON .)


state 10

    (2) expression -> expression PLUS . term
    (5) term -> . term TIMES factor
    (6) term -> . term DIVIDE factor
    (7) term -> . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    term                           shift and go to state 15
    factor                         shift and go to state 6

state 11

    (3) expression -> expression MINUS . term
    (5) term -> . term TIMES factor
    (6) term -> . term DIVIDE factor
    (7) term -> . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    term                           shift and go to state 16
    factor                         shift and go to state 6

state 12

    (5) term -> term TIMES . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    factor                         shift and go to state 17

state 13

    (6) term -> term DIVIDE . factor
    (8) factor -> . NUM
    (9) factor -> . LPAREN expression RPAREN

    NUM             shift and go to state 7
    LPAREN          shift and go to state 8

    factor                         shift and go to state 18

state 14

    (9) factor -> LPAREN expression . RPAREN
    (2) expression -> expression . PLUS term
    (3) expression -> expression . MINUS term

    RPAREN          shift and go to state 19
    PLUS            shift and go to state 10
    MINUS           shift and go to state 11


state 15

    (2) expression -> expression PLUS term .
    (5) term -> term . TIMES factor
    (6) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 2 (expression -> expression PLUS term .)
    PLUS            reduce using rule 2 (expression -> expression PLUS term .)
    MINUS           reduce using rule 2 (expression -> expression PLUS term .)
    RPAREN          reduce using rule 2 (expression -> expression PLUS term .)
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 13


state 16

    (3) expression -> expression MINUS term .
    (5) term -> term . TIMES factor
    (6) term -> term . DIVIDE factor

    SEMICOLON       reduce using rule 3 (expression -> expression MINUS term .)
    PLUS            reduce using rule 3 (expression -> expression MINUS term .)
    MINUS           reduce using rule 3 (expression -> expression MINUS term .)
    RPAREN          reduce using rule 3 (expression -> expression MINUS term .)
    TIMES           shift and go to state 12
    DIVIDE          shift and go to state 13


state 17

    (5) term -> term TIMES factor .

    TIMES           reduce using rule 5 (term -> term TIMES factor .)
    DIVIDE          reduce using rule 5 (term -> term TIMES factor .)
    SEMICOLON       reduce using rule 5 (term -> term TIMES factor .)
    PLUS            reduce using rule 5 (term -> term TIMES factor .)
    MINUS           reduce using rule 5 (term -> term TIMES factor .)
    RPAREN          reduce using rule 5 (term -> term TIMES factor .)


state 18

    (6) term -> term DIVIDE factor .

    TIMES           reduce using rule 6 (term -> term DIVIDE factor .)
    DIVIDE          reduce using rule 6 (term -> term DIVIDE factor .)
    SEMICOLON       reduce using rule 6 (term -> term DIVIDE factor .)
    PLUS            reduce using rule 6 (term -> term DIVIDE factor .)
    MINUS           reduce using rule 6 (term -> term DIVIDE factor .)
    RPAREN          reduce using rule 6 (term -> term DIVIDE factor .)


state 19

    (9) factor -> LPAREN expression RPAREN .

    TIMES           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    DIVIDE          reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    SEMICOLON       reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    PLUS            reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    MINUS           reduce using rule 9 (factor -> LPAREN expression RPAREN .)
    RPAREN          reduce using rule 9 (factor -> LPAREN expression RPAREN .)

